# Website-cloner

./: README.md  package-lock.json
backend/: hello.py  pyproject.toml
backend/app/: scraper.py
backend/backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
frontend/src/app/: globals.css  page.tsx
