[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "orchids-challenge-backend"
version = "0.1.0"
description = "Orchids-challenge backend: HTML/CSS extraction + CodeGen-350M cloning"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
  # Web framework + ASGI server
  "fastapi[standard]>=0.115.12",
  "uvicorn>=0.16.0",

  # Scraping & parsing
  "requests>=2.28.0",
  "beautifulsoup4>=4.12.2",

  # Free local LLM support
  "transformers>=4.35.0",
  "torch>=2.0.0",
]
